documentation/0.8/_sources/components/drifting_grating_stimulus.rst.txt
..
   !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
   WARNING:  This is a generated file.  Do not edit it manually!
   !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!

.. index::
   single: Drifting Grating Stimulus
   single: Stimuli; Drifting Grating Stimulus

.. _Drifting Grating Stimulus:

Drifting Grating Stimulus
=========================


Description
-----------
A drifting grating stimulus


Signature
---------
``stimulus/drifting_grating``


Required Parameters
-------------------

spatial_frequency
^^^^^^^^^^^^^^^^^
:Example: ``1``

Spatial frequency (cycles per degree)

speed
^^^^^
:Example: ``1``

Drift speed (degrees per second)

grating_type
^^^^^^^^^^^^
:Options: | ``sinusoid``
          | ``square``
          | ``triangle``
          | ``sawtooth``

Grating type

mask
^^^^
:Options: | ``rectangle``
          | ``ellipse``
          | ``gaussian``

Mask type



Optional Parameters
-------------------

direction
^^^^^^^^^
:Default: ``0.0``

Direction of drift (degrees)

starting_phase
^^^^^^^^^^^^^^
:Default: ``0.0``

Starting phase (degrees)

compute_phase_incrementally
^^^^^^^^^^^^^^^^^^^^^^^^^^^
:Default: ``NO``

If ``NO``, the current phase of the grating is computed from
`starting_phase`_, `spatial_frequency`_, `speed`_, and the total time
elapsed  since the stimulus started playing.

If ``YES``, the current phase is computed from the previous phase (i.e.
the phase when the stimulus was last drawn), `spatial_frequency`_,
`speed`_, and the time elapsed since the previous phase was computed.

This parameter is relevant only when the stimulus is `live queued <Live
Queue Stimulus>` and the values of `starting_phase`_,
`spatial_frequency`_, and/or `speed`_ are changed while the stimulus is
playing.  Most notably, if the parameter's value is ``NO``, then changes
to `speed`_ will cause a discontinuous jump in phase.  If the value is
``YES``, then changes to `speed`_ will be smooth, with no phase jump.


inverted
^^^^^^^^
:Default: ``NO``

If ``YES``, sawtooth gratings will start high instead of low


std_dev
^^^^^^^
:Default: ``1.0``

Standard deviation of Gaussian mask

mean
^^^^
:Default: ``0.0``

Mean of Gaussian mask.

This value determines the radial offset of the Gaussian peak from the
center of the grating.  If non-zero, the peak will be a circle, rather
than a point, and luminance will decrease both inside and outside the
circle, producing a toroidal stimulus.


normalized
^^^^^^^^^^
:Default: ``YES``

If ``YES``, the Gaussian mask includes a multiplicative normalization term (``1/(std_dev*sqrt(2*pi))``).  If ``NO``, this term is omitted.


color
^^^^^
:Default: ``1.0,1.0,1.0``

The color of the stimulus, expressed as a comma-separated list of red, green, and blue components.  Each component may be described by any valid expression, but the expression must result in a value between 0 and 1 (inclusive).


x_size
^^^^^^
:Example: ``5.0``

Horizontal size (degrees).

If omitted, the value of `y_size`_ is used.  It is an error to omit both
x_size and y_size (unless `fullscreen`_ is ``YES``).


y_size
^^^^^^
:Example: ``5.0``

Vertical size (degrees).

If omitted, the value of `x_size`_ is used.  It is an error to omit both
x_size and y_size (unless `fullscreen`_ is ``YES``).


x_position
^^^^^^^^^^
:Default: ``0.0``

Horizontal center position (degrees)

y_position
^^^^^^^^^^
:Default: ``0.0``

Vertical center position (degrees)

rotation
^^^^^^^^
:Default: ``0.0``

Rotation (degrees)

alpha_multiplier
^^^^^^^^^^^^^^^^
:Default: ``1.0``

Controls the transparency of the stimulus.  ``1.0`` is fully opaque, while ``0.0`` is fully tranparent.


fullscreen
^^^^^^^^^^
:Default: ``NO``

If ``YES``, the stimulus is sized to fill the display.  In this mode, `x_size`_, `y_size`_, `x_position`_, `y_position`_, and `rotation`_ are ignored.


deferred
^^^^^^^^
:Options: | ``no``
          | ``yes``
          | ``explicit``
:Default: ``no``

Controls when the stimulus is loaded.  If ``no``, the stimulus is loaded at experiment load time.  If ``yes``, the stimulus is loaded the first time it is `queued <Queue Stimulus>`.  If ``explicit``, the stimulus must be loaded explictly with `Load Stimulus`.


autoplay
^^^^^^^^
:Default: ``NO``

If ``YES``, the stimulus will start playing automatically (as if by an implicit `Play Dynamic Stimulus` action) after it has been `queued <Queue Stimulus>` and `Update Stimulus Display` has been invoked.  It will also stop playing automatically (as if by an implicit `Stop Dynamic Stimulus` action) after it has been `dequeued <Dequeue Stimulus>` and `Update Stimulus Display` is invoked.




Placement
---------
.. list-table::
   :widths: auto
   :stub-columns: 1

   * - Allowed at top level:
     - Yes
   * - Allowed parent:
     - `Folder`, `List Replicator`, `Range Replicator`, `Stimulus Group`
